# autoqc

./: .env.example  .gitignore  Dockerfile.celery  Dockerfile.web  docker-compose.yml  logger.py  manage.py  pyproject.toml
autoqc/: __init__.py  celery_app.py  responses.py  settings.py  urls.py  wsgi.py
docs/: gevent-audit.md
qc/: responses.py  serializers.py  urls.py  utils.py
qc/clients/: galaxy_client.py  gemini_client.py  gemini_models.py  nano_banana_client.py  s3_client.py
qc/constants/: constants.py  enums.py
qc/services/: image_service.py  redis_service.py  vehicle_analysis_redis_service.py
qc/tasks/: __init__.py  helpers.py  image_rotation.py  listing_qc.py  vehicle_analysis_qc.py
qc/views/: ai_qc_inventory.py  health.py  listing_qc.py  vehicle_analysis.py
scripts/: start-web.sh  start-worker.sh
