[project]
name = "autoqc"
version = "0.1.0"
description = "AutoQC - Automated Quality Control"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.4",
    "celery>=5.3",
    "redis>=5.0",
    "django-redis>=5.4",
    "langfuse>=2.0",
    "pydantic>=2.0",
    "zstandard>=0.22",
    "boto3>=1.34",
    "requests>=2.31",
    "pillow>=10.0",
    "pillow-heif>=0.16",
    "pillow-avif-plugin>=1.4",
    "environs>=11.0",
    "gunicorn>=21.2",
    "gevent>=24.0",
    "google-genai>=1.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
